--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		body,
 		html {
 			height: 100%;
+			overflow-x: hidden
 		}
 
 		body {
@@ -65,6 +66,8 @@
 			/* Horizontally right */
 			align-items: center;
 			/* Vertically center */
+			max-width: 100%; /* Ensures parent container doesn't exceed the viewport width */
+      overflow-x: hidden; /* Prevent overflow from flex container */
 		}
 
 		.child {
