--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					<br><br><br>
 
 					<a href="tel:+352 26201126">+352 26201126</a> <br>
-					<a href="maitto:enquiries@fortrockcapital.com">enquiries@fortrockcapital.com</a>
+					<a href="mailto:enquiries@fortrockcapital.com">enquiries@fortrockcapital.com</a>
 				</p>
 			</div>
 		</div>
