--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 width: 100%;
                 text-align: center;
                 /* Align text to the center on mobile */
+                margin-bottom: 30px;
             }
         }
     </style>
