--- a/index.html
+++ b/index.html
@@ -97,6 +97,38 @@
             /* Align text to the right on desktop */
         }
 
+        .ghost-button {
+            display: inline-block;
+            width: 160px;
+            padding: 8px;
+            color: #000;
+            border: 1px solid #000;
+            text-align: center;
+            outline: none;
+            text-decoration: none;
+        }
+
+        .ghost-button-border-color {
+            display: inline-block;
+            width: 160px;
+            padding: 8px;
+            color: #000;
+            border: 2px solid #000;
+            text-align: center;
+            outline: none;
+            text-decoration: none;
+            transition: border-color 0.3s ease-out, color 0.3s ease-out;
+        }
+
+        .ghost-button-border-color:hover,
+        .ghost-button-border-color:active {
+            color: #FF0000;
+            border-color: #FF0000;
+            transition: border-color 0.4s ease-in, color 0.4s ease-in;
+        }
+
+
+
         /* Mobile View */
         @media (max-width: 768px) {
 
@@ -145,6 +177,8 @@
     </style>
 </head>
 
+
+
 <body>
     <div class="parent">
         <div class="child">
@@ -155,8 +189,7 @@
                     L-1821 Luxembourg
                     <br><br><br>
 
-                    <a href="tel:+352 26201126">+352 26201126</a> <br>
-                    <a href="mailto:enquiries@fortrockcapital.com">enquiries@fortrockcapital.com</a>
+                    <a class="ghost-button-border-color" href="mailto:enquiries@fortrockcapital.com?subject=Enquiries">Contact Us</a>
                 </p>
             </div>
         </div>
